web: prevent word wrap in menu

--- a/web/views/varia.css
+++ b/web/views/varia.css
@@ -88,6 +88,7 @@ input, .none {
 
 .menuTable {
     background-color: #333;
+    white-space: nowrap;
 }
 
 .menu {
